# docling-local

./: .gitignore  Makefile  README.md  pyproject.toml
output/: Public_Crypto_Networks_as_Financial_Market_Infrastructures.md  Runs_and_Flights_to_Safety_Are_Stablecoins_the_New_Money_Market_Funds.md  docling_report.md  stablecoins_vs_Money_Market_Funds_A_Comparative_Analysis.md  vetoken.md
src/docling_local/: __init__.py  example.py  generate.py  pdf_converter.py
tests/: test_generate.py  test_pdf_converter.py  test_version.py
