[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docling-local"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Maxime Brugel"}
]
dependencies = [
    "docling>=2.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docling_local"]

[project.scripts]
docling-generate = "docling_local.generate:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true